# db-manager

./: README.MD  pyproject.toml
dbmanager/: __init__.py  postgres.py  sqlite.py
